# BeatDebate

./: .flake8  .gitignore  AGENT_CLEANUP_COMPLETION.md  CLEANUP_PLAN.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE_5_COMPLETION_SUMMARY.md  README.md  app.py  debug_entities.py  env.example  logging.conf  pyproject.toml  requirements.txt  test_backend_fixes.py  test_fix.py  test_followup_behavior.py  test_followup_detection_fix.py  test_genre_api.py  test_history_filtering.py  test_hybrid_context.py  test_hybrid_intent_final.py  test_hybrid_intent_fix.py  test_hybrid_subtypes.py  test_intent_fix.py  test_kendrick_followup.py  test_phase3_demo.py  test_query_fix.py  test_quick_hybrid.py  test_simple_extraction.py  test_smart_context.py  test_state_fix.py  test_ui_improvements.py
Design/: ENHANCED_JUDGE_AGENT_SUMMARY.md  agent_deep_dive_analysis.md  agent_improvements_quality_scoring_underground_detection.md  agents_refactoring_design.md  api_service_refactoring.md  candidate_generation_scaling_strategy.md  chromadb_discovery_agent_integration_design.md  codebase_functionality_overview.md  comprehensive_implementation_roadmap.md  context_aware_intent_override_system.md  context_aware_planner_fix.md  enhanced_judge_agent_ranking_design.md  enhanced_planner_entity_recognition_design.md  follow-up-improvements.md  huggingface_spaces_deployment_design.md  intent_aware_recommendation_system.md  langgraph_workflow_orchestration.md  langgraph_workflow_state_management_fix.md  llm_fallback_system_design.md  multi_user_session_handling_design.md  phase2_judge_agent_design.md  phase2_planner_agent_design.md  smart_context_management_design.md  underground_tracks_discovery.md  universal_followup_system_design.md
Design/Plans/: beatdebate-design-doc.md  project-scope.md
Design/refactor/: refactor.md
TODO/: todo.md
scripts/: validate_lastfm.py
src/: __init__.py  main.py
src/agents/: __init__.py  base_agent.py  conversation_context.py  discovery_agent.py  enhanced_candidate_generator.py  enhanced_discovery_generator.py  entity_recognizer.py  genre_mood_agent.py  judge_agent.py  multi_hop_similarity.py  planner_agent.py  quality_scorer.py  query_understanding.py  underground_detector.py
src/api/: __init__.py  backend.py  base_client.py  client_factory.py  lastfm_client.py  logging_middleware.py  rate_limiter.py  spotify_client.py
src/models/: __init__.py  agent_models.py  metadata_models.py  recommendation_models.py
src/services/: __init__.py  api_service.py  cache_manager.py  conversation_context_service.py  enhanced_recommendation_service.py  intent_orchestration_service.py  llm_fallback_service.py  metadata_service.py  (+4 more)
tests/: demo_enhanced_judge.py  test_advocate_agents.py  test_intent_aware_backend_integration.py  test_phase1_integration.py  test_phase2_integration.py  test_phase3_demo.py  test_planner_agent.py  test_pure_llm_query_understanding.py
(+91 files in other folders)
